
4.77  2014-02-05
  - Deprecated Mojo::DOM::text_after and Mojo::DOM::text_before in favor of
    Mojo::DOM::contents.
  - Added wrap_content method to Mojo::DOM.
  - Improved wrap method in Mojo::DOM to allow wrapping of the root node.

4.76  2014-02-04
  - Added wrap method to Mojo::DOM.
  - Updated IO::Socket::IP requirement to 0.20 for certain bug fixes.
  - Improved Mojo::DOM::HTML to generate better HTML.

4.75  2014-02-02
  - Fixed and readded support for permessage-deflate WebSocket compression.
    (Mikey, sri)

4.74  2014-02-02
  - Added all_contents method to Mojo::DOM.
  - Removed support for permessage-deflate WebSocket compression, since there
    have been too many problems with Chrome.

4.73  2014-02-01
  - Improved xml_escape performance significantly.
  - Improved html_unescape and url_unescape performance.
  - Fixed Mojo::UserAgent::Transactor to handle redirects more like most
    common browsers.

4.72  2014-01-29
  - Added accepts, template_for and template_handler methods to
    Mojolicious::Renderer.
  - Added accepts helper to Mojolicious::Plugin::DefaultHelpers.
  - Added before_render hook.
  - Fixed bug in Mojo::Transaction::WebSocket that prevented decompression
    errors from being handled gracefully.

4.71  2014-01-28
  - Fixed a few compression bugs in Mojo::Transaction::WebSocket and
    Mojo::Content.

4.70  2014-01-26
  - Added extract_usage method to Mojolicious::Command.
  - Added unindent method to Mojo::ByteStream.
  - Added unindent function to Mojo::Util.
  - Updated jQuery to version 2.1.
  - Improved all built-in commands to show usage information in their SYNOPSIS
    sections.
  - Improved tag helpers to make data attributes more convenient. (ravengerUA)
      %= tag 'div', data => {my_id => 1, Name => 'test'} => 'some content'
    is equivalent to
      %= tag 'div', data-my-id => 1, data-name => 'test' => 'some content'
  - Fixed indentation of code in documentation browser.

4.69  2014-01-24