@@ -1003,13 +1003,14 @@ is $res->dom->at('p > a')->text, 'bar', 'right value';
 is $res->dom('p')->first->text, 'foo', 'right value';
 is_deeply [$res->dom('p > a')->pluck('text')->each], [qw(bar baz)],
   'right values';
-my @text = $res->dom('a')->pluck(replace_content => 'yada')
-  ->first->root->find('p > a')->pluck('text')->each;
+my @text = $res->dom('a')->pluck(content => 'yada')->first->root->find('p > a')
+  ->pluck('text')->each;
 is_deeply \@text, [qw(yada yada)], 'right values';
 is_deeply [$res->dom('p > a')->pluck('text')->each], [qw(yada yada)],
   'right values';
-@text = $res->dom->find('a')->pluck(replace_content => 'test')
-  ->first->root->find('p > a')->pluck('text')->each;
+@text
+  = $res->dom->find('a')->pluck(content => 'test')->first->root->find('p > a')
+  ->pluck('text')->each;
 is_deeply \@text, [qw(test test)], 'right values';
 is_deeply [$res->dom->find('p > a')->pluck('text')->each], [qw(test test)],
   'right values';
