@@ -8,7 +8,10 @@ plan skip_all => 'Test::Pod::Coverage 1.04 required for this test!'
   unless eval 'use Test::Pod::Coverage 1.04; 1';
 
 # DEPRECATED in Top Hat!
-my @tophat = qw(secret text_after text_before to_rel);
+my @tophat = (
+  qw(content_xml replace_content secret text_after text_before to_rel),
+  qw(to_xml)
+);
 
 # False positive constants
 all_pod_coverage_ok({also_private => [qw(IPV6 TLS), @tophat]});
