@@ -2,6 +2,9 @@
 4.77  2014-02-05
   - Deprecated Mojo::DOM::text_after and Mojo::DOM::text_before in favor of
     Mojo::DOM::contents.
+  - Deprecated Mojo::DOM::content_xml and Mojo::DOM::replace_content in favor
+    of Mojo::DOM::content.
+  - Deprecated Mojo::DOM::to_xml in favor of Mojo::DOM::to_string.
   - Added wrap_content method to Mojo::DOM.
   - Improved wrap method in Mojo::DOM to allow wrapping of the root node.
 
